force-app/main/default/objects/Sales_Agreement_Schedule__c/Sales_Agreement_Schedule__c.object-meta.xml
<CustomObject>
    <label>月別スケジュール</label>
    <nameField>
        <displayFormat>SAS-{0000}</displayFormat>
        <label>スケジュール番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>月別スケジュール</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>