force-app/main/default/objects/Sales_Agreement_Schedule__c/fields/Actual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity__c</fullName>
    <label>実績数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>