force-app/main/default/objects/Sales_Agreement_Schedule__c/fields/Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amount__c</fullName>
    <label>計画金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>