force-app/main/default/objects/Sales_Agreement_Schedule__c/fields/Sales_Agreement_Product__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_Product__c</fullName>
    <label>契約製品</label>
    <referenceTo>Sales_Agreement_Product__c</referenceTo>
    <relationshipLabel>月別スケジュール</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>