force-app/main/default/objects/Sales_Agreement_Schedule__c/fields/Schedule_Month__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Month__c</fullName>
    <label>対象月</label>
    <required>true</required>
    <type>Date</type>
</CustomField>